[project]
name = "r2fft"
version = "0.1.0"
description = "Radix-2 FFT Algorithm Exploration"
authors = [
    {name = "Tyler Evans",email = "tje2111@columbia.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "graphviz (>=0.20.3,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
mypy = "^1.14.1"
sphinx = "^8.1.3"
ipython = "^8.31.0"
nbsphinx = "^0.9.6"

